sidebar block spacing fix

--- a/sites/all/themes/newhopeks/css/style.css
+++ b/sites/all/themes/newhopeks/css/style.css
@@ -6176,7 +6176,7 @@ table > tbody > tr:hover > th {
 }
 @media (min-width: 768px) {
   .sidebar .block {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   }
 }
 .sidebar .subnav {
