--- a/sites/all/themes/newhopeks/less/blocks.less
+++ b/sites/all/themes/newhopeks/less/blocks.less
@@ -62,7 +62,7 @@
 	}
 
 	@media (min-width: @screen-sm) {
-        margin-bottom: 10px;
+        margin-bottom: 20px;
 	}
 
 }
